--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-<h1>Testing</h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    <title>Price Calculator</title>
+
+    <script>
+     function calculatorClicked() {
+       $("#pricing-rules-div").attr("style", "display: none");
+       $("#calculator-div").attr("style", "display: block");
+     }
+
+     function pricingRulesClicked() {
+       $("#pricing-rules-div").attr("style", "display: block");
+       $("#calculator-div").attr("style", "display: none");
+     }
+    </script>
+  </head>
+
+  <body>
+    <div class="container">
+      <h2>UNIDAYS Discount Challenge</h2>
+      <div class="row">
+        <div class="col-4">
+          <ul class="nav flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" href="#" onclick="calculatorClicked()">Calculator</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"  onclick="pricingRulesClicked()">Pricing Rules</a>
+          </li>
+        </ul>
+        </div>
+        <div class="col-8">
+          <div id="calculator-div" style="display: block;">
+            <h1>Right column</h1>
+          </div>
+          <div id="pricing-rules-div" style="display: none;">
+            <h1>Hidden content</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
