--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
       <h2>UNIDAYS Discount Challenge</h2>
       <div class="row">
-        <div class="col-4">
+        <div class="col-3">
           <ul class="nav flex-column">
           <li class="nav-item">
             <a class="nav-link active" href="#" onclick="calculatorClicked()">Calculator</a>
@@ -43,9 +43,16 @@
           </li>
         </ul>
         </div>
-        <div class="col-8">
+        <div class="col-9">
           <div id="calculator-div" style="display: block;">
-            <h1>Right column</h1>
+            <div class="row">
+              <div class="col-8">
+                <h1>Middle column</h1>
+              </div>
+              <div class="col-4">
+                <h1>Left column</h1>
+              </div>
+            </div>
           </div>
           <div id="pricing-rules-div" style="display: none;">
             <h1>Hidden content</h1>
