--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <h2>UNIDAYS Discount Challenge</h2>
       <div class="row">
         <div class="col-3">
