--- a/index.html
+++ b/index.html
@@ -17,40 +17,111 @@
     <title>Price Calculator</title>
 
     <script>
-     function calculatorClicked() {
-       $("#pricing-rules-div").attr("style", "display: none");
-       $("#calculator-div").attr("style", "display: block");
-     }
+    var item = [];
+    var shoppingCart = [];
 
-     function pricingRulesClicked() {
-       $("#pricing-rules-div").attr("style", "display: block");
-       $("#calculator-div").attr("style", "display: none");
-     }
+    var defaultPricingRule = {
+      A: {price: 8,
+          discount: "none"},
+      B: {price: 12,
+          discount: "2 cost 20"},
+      C: {price: 4,
+          discount: "3 cost 10"},
+      D: {price: 7,
+          discount: "1 free 1"},
+      E: {price: 5,
+          discount: "3 for 2"}
+    };
+
+    function callCheckObj(){
+      checkType(defaultPricingRule);
+    }
+
+    function checkType(obj){
+      console.log(typeof obj);
+      return typeof obj;
+    }
+
+    class UnidaysDiscountChallenge  {
+      constructor(pricingRules) {
+        this.total = 0;
+        this.DeliveryCharge = 0;
+      }
+
+      get total(){
+        return this.total;
+      }
+
+      get deliveryCharge(){
+        return this.deliveryCharge;
+      }
+
+      AddToBasket(item){
+
+      }
+
+      CalculateTotalPrice(){
+
+      }
+    }
+    function calculatorClicked() {
+      $("#pricing-rules-div").attr("style", "display: none");
+      $("#calculator-div").attr("style", "display: block");
+    }
+
+    function pricingRulesClicked() {
+      $("#pricing-rules-div").attr("style", "display: block");
+      $("#calculator-div").attr("style", "display: none");
+    }
+
     </script>
   </head>
 
   <body>
-    <div class="container-fluid">
-      <h2>UNIDAYS Discount Challenge</h2>
+    <div class="container-fluid" style="width: 85%; height: 95%;">
+      <div class="h-25 d-inline-block">
+      </div>
+      <h2>UNiDAYS Discount Challenge</h2>
+      <div class="col-xs-12" style="height:20px;"></div>
       <div class="row">
-        <div class="col-3">
+        <div class="col-2">
           <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" href="#" onclick="calculatorClicked()">Calculator</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"  onclick="pricingRulesClicked()">Pricing Rules</a>
-          </li>
+            <li class="nav-item">
+              <button type="button" class="btn btn-default" onclick="calculatorClicked()">Calculator</button>
+            </li>
+            <div class="col-xs-12" style="height:10px;"></div>
+            <li class="nav-item">
+              <button type="button" class="btn btn-default" onclick="pricingRulesClicked()">Pricing Rules</button>
+            </li>
         </ul>
+        </div>
+        <div class="col-1">
         </div>
         <div class="col-9">
           <div id="calculator-div" style="display: block;">
             <div class="row">
-              <div class="col-8">
-                <h1>Middle column</h1>
+              <div class="col-7">
+                <h3>Items</h3>
+                <div class="row">
+                  <input type="text" class="form-control" style="width: 70%;">
+                  <button class="btn btn-default" onclick="callCheckObj()">Get price</button>
+                </div>
               </div>
-              <div class="col-4">
-                <h1>Left column</h1>
+              <div class="col-2">
+                <h4>Summary</h4>
+                <hr size="5" id="belowSummary" style="display: none;">
+                <div id="itemNone" style="display: block"></div>
+                <div id="itemA" style="display: none;"></div>
+                <div id="itemB" style="display: none;"></div>
+                <div id="itemC" style="display: none;"></div>
+                <div id="itemD" style="display: none;"></div>
+                <div id="itemE" style="display: none;"></div>
+                <div id="itemF" style="display: none;"></div>
+                <hr size="5">
+                <h5>Delivery</h5>
+                <h6>£0.00</h6>
+                <h5>Total</h5>
+                <h6>£0.00</h6>
               </div>
             </div>
           </div>
