--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       }
 
       initializeBasket(){
-        var emptyBasket = []
-        for(var i=0; i<this.pricingRules.length; i++){
-          emptyBasket.push(this.pricingRules[i])
+        var emptyBasket = {};
+        for(var key in this.pricingRules) {
+          emptyBasket[key] = 0;
         }
       }
 
