--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS, then Vue.js -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/vue.min.js"></script>
 
     <title>Price Calculator</title>
 
@@ -32,28 +33,6 @@
       E: {price: 5,
           discount: "3 for 2"}
     };
-
-    function callCheckObj(){
-      var cart = $("#cart").val();
-      let rules = new UnidaysDiscountChallenge(defaultPricingRule);
-
-      for(var i=0; i<cart.length; i++){
-        rules.addToBasket(cart[i]);
-      }
-
-      rules.calculateTotalPrice();
-
-      var basket = rules.basket();
-
-      for(var key in basket){
-        if(basket[key]!=0){
-          $("#" + key).attr("style", "display: block");
-        }
-      }
-
-      $("#deliveryDisplay").html("£" + rules.deliveryCharge());
-      $("#totalDisplay").html("£ " + rules.total());
-    }
 
     class UnidaysDiscountChallenge  {
       constructor(pricingRules) {
@@ -155,6 +134,9 @@
         if(this._total >= 50){
           this._deliveryCharge = 0;
         }
+        else if(this._total == 0){
+          this._deliveryCharge = 0;
+        }
         else{
           this._deliveryCharge = 7;
         }
@@ -162,6 +144,18 @@
     }
 
     $(document).ready(function () {
+      var app1 = new Vue({
+        el: '#app-1',
+        data: {
+          message: 'Hello Vue!'
+        },
+        methods: {
+          updateCart: function () {
+            console.log("changed", this.message);
+          }
+        }
+      });
+
       $("#showCalculator").click(function () {
         $("#pricing-rules-div").attr("style", "display: none");
         $("#calculator-div").attr("style", "display: block");
@@ -170,6 +164,35 @@
       $("#showPricingRules").click(function (){
         $("#pricing-rules-div").attr("style", "display: block");
         $("#calculator-div").attr("style", "display: none");
+      });
+
+      $("#updateInfo").click(function (){
+        var cart = $("#cart").val().toUpperCase();
+        let rules = new UnidaysDiscountChallenge(defaultPricingRule);
+
+        for(var i=0; i<cart.length; i++){
+          rules.addToBasket(cart[i]);
+        }
+
+        rules.calculateTotalPrice();
+
+        var basket = rules.basket();
+        $("#belowSummary").attr("style", "display: none");
+
+        for(var key in basket){
+          var label = "#" + key;
+          if(basket[key]!=0){
+            $("#belowSummary").attr("style", "display: block");
+            $(label).attr("style", "display: block");
+            $(label).html(key + ": " + basket[key]);
+          }
+          else{
+            $(label).attr("style", "display: none");
+          }
+        }
+
+        $("#deliveryDisplay").html("£" + rules.deliveryCharge());
+        $("#totalDisplay").html("£ " + rules.total());
       });
     });
 
@@ -181,24 +204,54 @@
       <div class="h-25 d-inline-block">
       </div>
       <h2>UNiDAYS Discount Challenge</h2>
-      <div class="col-xs-12" style="height:20px;"></div>
+      <div class="col-xs-12" style="height:1em;"></div>
       <div class="row">
         <div class="col-2">
           <button id="showCalculator" type="button" class="btn btn-default">Calculator</button>
-          <div class="col-xs-12" style="height:15px;"></div>
+          <div class="col-xs-12" style="height:1em;"></div>
           <button id="showPricingRules" type="button" class="btn btn-default">Pricing Rules</button>
-        </div>
-        <div class="col-1">
         </div>
         <div class="col-9">
           <div id="calculator-div" style="display: block;">
             <div class="row">
               <div class="col-7">
                 <h3>Items</h3>
-                <div class="row">
-                  <input id="cart" type="text" class="form-control" style="width: 70%;">
-                  <button class="btn btn-default" onclick="callCheckObj()">Get price</button>
+                <div class="row" style="text-align: center">
+                  <div class="col">
+                    <h1>A</h1>
+                    <input class="ACount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
+                  </div>
+                  <div class="col">
+                    <h1>B</h1>
+                    <input class="BCount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
+                  </div>
+                  <div class="col">
+                    <h1>C</h1>
+                    <input class="CCount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
+                  </div>
                 </div>
+                <div class="col-xs-12" style="height:1em;"></div>
+                <div class="row" style="text-align: center">
+                  <div class="col">
+                    <h1>D</h1>
+                    <input class="DCount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
+                  </div>
+                  <div class="col">
+                    <h1>E</h1>
+                    <input class="ECount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
+                  </div>
+                  <div class="col">
+                  </div>
+                </div>
+                <div class="col-xs-12" style="height:3em;"></div>
+                <div class="row">
+                  <div class="col" id="app-1">
+                    <input id="cart" type="text" class="form-control" v-model="message" v-on:change="updateCart" style="width: 100%;">
+                    <p>{{ message }}</p>
+                  </div>
+                  <div class="col">
+                    <button id="updateInfo" class="btn btn-default">Get price</button></div>
+                  </div>
               </div>
               <div class="col-2">
                 <h4>Summary</h4>
