--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS, then Vue.js -->
     <script src="js/jquery-3.3.1.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/vue.min.js"></script>
 
@@ -215,18 +215,21 @@
           <div id="calculator-div" style="display: block;">
             <div class="row">
               <div class="col-7">
-                <h3>Items</h3>
+                <h4>Items</h4>
                 <div class="row" style="text-align: center">
                   <div class="col">
                     <h1>A</h1>
+                    <h5>£8.00</h5>
                     <input class="ACount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
                   </div>
                   <div class="col">
                     <h1>B</h1>
+                    <h5>£12.00</h5>
                     <input class="BCount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
                   </div>
                   <div class="col">
                     <h1>C</h1>
+                    <h5>£4.00</h5>
                     <input class="CCount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
                   </div>
                 </div>
@@ -234,10 +237,12 @@
                 <div class="row" style="text-align: center">
                   <div class="col">
                     <h1>D</h1>
+                    <h5>£7.00</h5>
                     <input class="DCount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
                   </div>
                   <div class="col">
                     <h1>E</h1>
+                    <h5>£5.00</h5>
                     <input class="ECount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
                   </div>
                   <div class="col">
@@ -272,7 +277,55 @@
             </div>
           </div>
           <div id="pricing-rules-div" style="display: none;">
-            <h1>Hidden content</h1>
+            <h4>Pricing Policies</h4>
+            <div class="col-xs-12" style="height:1em;"></div>
+            <div class="row">
+              <div class="col-2">
+                <h3>Item</h3>
+                <div class="col-xs-12" style="height:1em;"></div>
+                <h4>A</h4>
+                <div class="col-xs-12" style="height:1em;"></div>
+                <h4>B</h4>
+                <div class="col-xs-12" style="height:1em;"></div>
+                <h4>C</h4>
+                <div class="col-xs-12" style="height:1em;"></div>
+                <h4>D</h4>
+                <div class="col-xs-12" style="height:1em;"></div>
+                <h4>E</h4>
+              </div>
+              <div class="col-4">
+                <h3>Price</h3>
+                <div class="col-xs-12" style="height:1em;"></div>
+                <h4>£8.00</h4>
+                <div class="col-xs-12" style="height:1em;"></div>
+                <h4>£12.00</h4>
+                <div class="col-xs-12" style="height:1em;"></div>
+                <h4>£4.00</h4>
+                <div class="col-xs-12" style="height:1em;"></div>
+                <h4>£7.00</h4>
+                <div class="col-xs-12" style="height:1em;"></div>
+                <h4>£5.00</h4>
+              </div>
+              <div class="col-6">
+                <h3>Discount</h3>
+
+                <!-- Example single danger button -->
+                <div class="btn-group">
+                  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    None
+                  </button>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">None</a>
+                    <a class="dropdown-item" href="#">x for £..</a>
+                    <a class="dropdown-item" href="#">Buy x get y free</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Separated link</a>
+                  </div>
+                </div>
+                <div class="col-xs-12" style="height:1em;"></div>
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
