--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
         $("#deliveryDisplay").html("£" + rules.deliveryCharge());
         $("#totalDisplay").html("£ " + rules.total());
       });
+
+      $('#myDropdown').on('show.bs.dropdown', function () {
+        console.log("dropdown changed");
+      });
     });
 
     </script>
@@ -279,53 +283,135 @@
           <div id="pricing-rules-div" style="display: none;">
             <h4>Pricing Policies</h4>
             <div class="col-xs-12" style="height:1em;"></div>
+
             <div class="row">
               <div class="col-2">
                 <h3>Item</h3>
-                <div class="col-xs-12" style="height:1em;"></div>
-                <h4>A</h4>
-                <div class="col-xs-12" style="height:1em;"></div>
-                <h4>B</h4>
-                <div class="col-xs-12" style="height:1em;"></div>
-                <h4>C</h4>
-                <div class="col-xs-12" style="height:1em;"></div>
-                <h4>D</h4>
-                <div class="col-xs-12" style="height:1em;"></div>
-                <h4>E</h4>
               </div>
               <div class="col-4">
                 <h3>Price</h3>
-                <div class="col-xs-12" style="height:1em;"></div>
-                <h4>£8.00</h4>
-                <div class="col-xs-12" style="height:1em;"></div>
-                <h4>£12.00</h4>
-                <div class="col-xs-12" style="height:1em;"></div>
-                <h4>£4.00</h4>
-                <div class="col-xs-12" style="height:1em;"></div>
-                <h4>£7.00</h4>
-                <div class="col-xs-12" style="height:1em;"></div>
-                <h4>£5.00</h4>
               </div>
               <div class="col-6">
                 <h3>Discount</h3>
+              </div>
+            </div>
+            <div class="col-xs-12" style="height:1em;"></div>
 
-                <!-- Example single danger button -->
-                <div class="btn-group">
-                  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="row">
+              <div class="col-2">
+                <h4>A</h4>
+              </div>
+              <div class="col-4">
+                <h4>£8.00</h4>
+              </div>
+              <div class="col-6">
+                <div class="btn-group" id="myDropdown">
+                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
                     None
                   </button>
                   <div class="dropdown-menu">
                     <a class="dropdown-item" href="#">None</a>
                     <a class="dropdown-item" href="#">x for £..</a>
                     <a class="dropdown-item" href="#">Buy x get y free</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
+                    <a class="dropdown-item" href="#">x for the price of y</a>
                   </div>
                 </div>
-                <div class="col-xs-12" style="height:1em;"></div>
-
               </div>
             </div>
+            <div class="col-xs-12" style="height:1em;"></div>
+
+            <div class="row">
+              <div class="col-2">
+                <h4>B</h4>
+              </div>
+              <div class="col-4">
+                <h4>£12.00</h4>
+              </div>
+              <div class="col-6">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
+                    x for £..
+                  </button>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">None</a>
+                    <a class="dropdown-item" href="#">x for £..</a>
+                    <a class="dropdown-item" href="#">Buy x get y free</a>
+                    <a class="dropdown-item" href="#">x for the price of y</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12" style="height:1em;"></div>
+
+            <div class="row">
+              <div class="col-2">
+                <h4>C</h4>
+              </div>
+              <div class="col-4">
+                <h4>£4.00</h4>
+              </div>
+              <div class="col-6">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
+                    x for £..
+                  </button>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">None</a>
+                    <a class="dropdown-item" href="#">x for £..</a>
+                    <a class="dropdown-item" href="#">Buy x get y free</a>
+                    <a class="dropdown-item" href="#">x for the price of y</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12" style="height:1em;"></div>
+
+            <div class="row">
+              <div class="col-2">
+                <h4>D</h4>
+              </div>
+              <div class="col-4">
+                <h4>£7.00</h4>
+              </div>
+              <div class="col-6">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
+                    Buy x get y free
+                  </button>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">None</a>
+                    <a class="dropdown-item" href="#">x for £..</a>
+                    <a class="dropdown-item" href="#">Buy x get y free</a>
+                    <a class="dropdown-item" href="#">x for the price of y</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12" style="height:1em;"></div>
+
+            <div class="row">
+              <div class="col-2">
+                <h4>E</h4>
+              </div>
+              <div class="col-4">
+                <h4>£5.00</h4>
+              </div>
+              <div class="col-6">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
+                    x for the price of y
+                  </button>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">None</a>
+                    <a class="dropdown-item" href="#">x for £..</a>
+                    <a class="dropdown-item" href="#">Buy x get y free</a>
+                    <a class="dropdown-item" href="#">x for the price of y</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12" style="height:1em;"></div>
+
           </div>
         </div>
       </div>
