Can change the items from the number input fields

--- a/index.html
+++ b/index.html
@@ -144,10 +144,11 @@
     }
 
     $(document).ready(function () {
+      var itemArray = ['A', 'B', 'C', 'D', 'E'];
       var app1 = new Vue({
         el: '#app-1',
         data: {
-          message: 'Hello Vue!'
+          message: ''
         },
         methods: {
           updateCart: function () {
@@ -193,6 +194,49 @@
 
         $("#deliveryDisplay").html("£" + rules.deliveryCharge());
         $("#totalDisplay").html("£ " + rules.total());
+      });
+
+      var itemOption = ".ACount";
+      var item = 'A';
+      $(itemOption).bind('input', function (){
+        console.log(itemOption, "changed");
+        var summary = $("#cart").val();
+        var amount = $(itemOption).val();
+        var appearance = 0;
+
+        for(var i=0; i<summary.length; i++){
+          if(summary[i].toUpperCase() == item){
+            appearance += Number(1);
+          }
+        }
+
+        if(amount > appearance){
+
+          while(amount > appearance){
+            summary += item;
+            appearance += Number(1);
+          }
+        }
+        else if(amount < appearance){
+          while(amount < appearance){
+            var i=0;
+            var found = false;
+
+            while(i<summary.length && found == false){
+              if(summary[i].toUpperCase() == item){
+                summary = summary.substring(0, i) + summary.substring(i+1);
+                found = true;
+              }
+              else{
+                i += Number(1);
+              }
+            }
+
+            appearance -= Number(1);
+          }
+        }
+
+        $("#cart").val(summary);
       });
 
       $('#myDropdown').on('show.bs.dropdown', function () {
