--- a/index.html
+++ b/index.html
@@ -21,19 +21,6 @@
     var item = [];
     var shoppingCart = [];
 
-    var defaultPricingRule = {
-      A: {price: 8,
-          discount: "none"},
-      B: {price: 12,
-          discount: "2 cost 20"},
-      C: {price: 4,
-          discount: "3 cost 10"},
-      D: {price: 7,
-          discount: "1 free 1"},
-      E: {price: 5,
-          discount: "3 for 2"}
-    };
-
     class UnidaysDiscountChallenge  {
       constructor(pricingRules) {
         this._total = 0;
@@ -155,6 +142,19 @@
           }
         }
       });
+
+      var defaultPricingRule = {
+        A: {price: 8,
+            discount: "none"},
+        B: {price: 12,
+            discount: "2 cost 20"},
+        C: {price: 4,
+            discount: "3 cost 10"},
+        D: {price: 7,
+            discount: "1 free 1"},
+        E: {price: 5,
+            discount: "3 for 2"}
+      };
 
       $("#showCalculator").click(function () {
         $("#pricing-rules-div").attr("style", "display: none");
@@ -281,7 +281,17 @@
       });
 
       $('#makeChanges').click(function(){
-        console.log("update button clicked");
+        defaultPricingRule['A']['price'] = $('#APrice').val();
+        defaultPricingRule['B']['price'] = $('#BPrice').val();
+        defaultPricingRule['C']['price'] = $('#CPrice').val();
+        defaultPricingRule['D']['price'] = $('#DPrice').val();
+        defaultPricingRule['E']['price'] = $('#EPrice').val();
+
+        $('#APriceTag').html("£" + Number($('#APrice').val()).toFixed(2));
+        $('#BPriceTag').html("£" + Number($('#BPrice').val()).toFixed(2));
+        $('#CPriceTag').html("£" + Number($('#CPrice').val()).toFixed(2));
+        $('#DPriceTag').html("£" + Number($('#DPrice').val()).toFixed(2));
+        $('#EPriceTag').html("£" + Number($('#EPrice').val()).toFixed(2));
       });
     });
 
@@ -308,17 +318,17 @@
                 <div class="row" style="text-align: center">
                   <div class="col">
                     <h1>A</h1>
-                    <h5>£8.00</h5>
+                    <h5 id="APriceTag">£8.00</h5>
                     <input class="ACount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
                   </div>
                   <div class="col">
                     <h1>B</h1>
-                    <h5>£12.00</h5>
+                    <h5 id="BPriceTag">£12.00</h5>
                     <input class="BCount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
                   </div>
                   <div class="col">
                     <h1>C</h1>
-                    <h5>£4.00</h5>
+                    <h5 id="CPriceTag">£4.00</h5>
                     <input class="CCount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
                   </div>
                 </div>
@@ -326,12 +336,12 @@
                 <div class="row" style="text-align: center">
                   <div class="col">
                     <h1>D</h1>
-                    <h5>£7.00</h5>
+                    <h5 id="DPriceTag">£7.00</h5>
                     <input class="DCount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
                   </div>
                   <div class="col">
                     <h1>E</h1>
-                    <h5>£5.00</h5>
+                    <h5 id="EPriceTag">£5.00</h5>
                     <input class="ECount" type="number" value="0" min="0" style="width: 60%; text-align: center; font-size: 20px">
                   </div>
                   <div class="col">
@@ -374,7 +384,7 @@
                 <h3>Item</h3>
               </div>
               <div class="col-4">
-                <h3>Price</h3>
+                <h3>Price/£</h3>
               </div>
               <div class="col-6">
                 <h3>Discount</h3>
@@ -387,7 +397,7 @@
                 <h4>A</h4>
               </div>
               <div class="col-4">
-                <h4>£<input type="number" value="8.00" min="0.00" style="width: 60%; text-align: center; font-size: 20px"></h4>
+                <input id="APrice" type="number" value="8.00" min="0.00" style="width: 30%; text-align: center; font-size: 20px">
               </div>
               <div class="col-6">
                 <div class="btn-group" id="myDropdown">
@@ -410,7 +420,7 @@
                 <h4>B</h4>
               </div>
               <div class="col-4">
-                <h4>£12.00</h4>
+                <input id="BPrice" type="number" value="12.00" min="0.00" style="width: 30%; text-align: center; font-size: 20px">
               </div>
               <div class="col-6">
                 <div class="btn-group">
@@ -433,7 +443,7 @@
                 <h4>C</h4>
               </div>
               <div class="col-4">
-                <h4>£4.00</h4>
+                <input id="CPrice" type="number" value="4.00" min="0.00" style="width: 30%; text-align: center; font-size: 20px">
               </div>
               <div class="col-6">
                 <div class="btn-group">
@@ -456,7 +466,7 @@
                 <h4>D</h4>
               </div>
               <div class="col-4">
-                <h4>£7.00</h4>
+                <input id="DPrice" type="number" value="7.00" min="0.00" style="width: 30%; text-align: center; font-size: 20px">
               </div>
               <div class="col-6">
                 <div class="btn-group">
@@ -479,7 +489,7 @@
                 <h4>E</h4>
               </div>
               <div class="col-4">
-                <h4>£5.00</h4>
+                <input id="EPrice" type="number" value="5.00" min="0.00" style="width: 30%; text-align: center; font-size: 20px">
               </div>
               <div class="col-6">
                 <div class="btn-group">
