--- a/index.html
+++ b/index.html
@@ -292,6 +292,24 @@
         $('#CPriceTag').html("£" + Number($('#CPrice').val()).toFixed(2));
         $('#DPriceTag').html("£" + Number($('#DPrice').val()).toFixed(2));
         $('#EPriceTag').html("£" + Number($('#EPrice').val()).toFixed(2));
+
+        $('.ACount').val('0');
+        $('.BCount').val('0');
+        $('.CCount').val('0');
+        $('.DCount').val('0');
+        $('.ECount').val('0');
+
+        $('#cart').val('');
+
+        $("#belowSummary").attr("style", "display: none");
+
+        for(var key in defaultPricingRule){
+          var label = "#" + key;
+          $(label).attr("style", "display: none");
+        }
+
+        $("#deliveryDisplay").html("£0.00");
+        $("#totalDisplay").html("£0.00");
       });
     });
 
@@ -383,10 +401,10 @@
               <div class="col-2">
                 <h3>Item</h3>
               </div>
-              <div class="col-4">
+              <div class="col-2">
                 <h3>Price/£</h3>
               </div>
-              <div class="col-6">
+              <div class="col-8">
                 <h3>Discount</h3>
               </div>
             </div>
@@ -396,10 +414,10 @@
               <div class="col-2">
                 <h4>A</h4>
               </div>
-              <div class="col-4">
-                <input id="APrice" type="number" value="8.00" min="0.00" style="width: 30%; text-align: center; font-size: 20px">
+              <div class="col-2">
+                <input id="APrice" type="number" value="8.00" min="0.00" style="width: 90%; text-align: center; font-size: 20px">
               </div>
-              <div class="col-6">
+              <div class="col-8">
                 <div class="btn-group" id="myDropdown">
                   <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
                     None
@@ -419,10 +437,10 @@
               <div class="col-2">
                 <h4>B</h4>
               </div>
-              <div class="col-4">
-                <input id="BPrice" type="number" value="12.00" min="0.00" style="width: 30%; text-align: center; font-size: 20px">
+              <div class="col-2">
+                <input id="BPrice" type="number" value="12.00" min="0.00" style="width: 90%; text-align: center; font-size: 20px">
               </div>
-              <div class="col-6">
+              <div class="col-8">
                 <div class="btn-group">
                   <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
                     x for £..
@@ -442,10 +460,10 @@
               <div class="col-2">
                 <h4>C</h4>
               </div>
-              <div class="col-4">
-                <input id="CPrice" type="number" value="4.00" min="0.00" style="width: 30%; text-align: center; font-size: 20px">
+              <div class="col-2">
+                <input id="CPrice" type="number" value="4.00" min="0.00" style="width: 90%; text-align: center; font-size: 20px">
               </div>
-              <div class="col-6">
+              <div class="col-8">
                 <div class="btn-group">
                   <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
                     x for £..
@@ -465,10 +483,10 @@
               <div class="col-2">
                 <h4>D</h4>
               </div>
-              <div class="col-4">
-                <input id="DPrice" type="number" value="7.00" min="0.00" style="width: 30%; text-align: center; font-size: 20px">
+              <div class="col-2">
+                <input id="DPrice" type="number" value="7.00" min="0.00" style="width: 90%; text-align: center; font-size: 20px">
               </div>
-              <div class="col-6">
+              <div class="col-8">
                 <div class="btn-group">
                   <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
                     Buy x get y free
@@ -488,10 +506,10 @@
               <div class="col-2">
                 <h4>E</h4>
               </div>
-              <div class="col-4">
-                <input id="EPrice" type="number" value="5.00" min="0.00" style="width: 30%; text-align: center; font-size: 20px">
+              <div class="col-2">
+                <input id="EPrice" type="number" value="5.00" min="0.00" style="width: 90%; text-align: center; font-size: 20px">
               </div>
-              <div class="col-6">
+              <div class="col-8">
                 <div class="btn-group">
                   <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
                     x for the price of y
@@ -508,9 +526,9 @@
             <div class="col-xs-12" style="height:3em;"></div>
 
             <div class="row">
-              <div class="col-6">
+              <div class="col-4">
               </div>
-              <div class="col-6">
+              <div class="col-8">
                 <button id="makeChanges" type="button" class="btn btn-primary">Apply Changes</button>
               </div>
             </div>
